# TG

./: .gitignore  CLAUDE.md  Makefile  PLAN.md
.claude/: settings.json
pre_projeto/: graduation_project_plan.docx  pre_projeto.tex  referencias.bib  tema1.txt
project/: phase2_serving_report.md  phase3_bench_report.md  phase3_cpu_mechanism_report.md
project/1-model/: download.py  export.py  model_card.md  phase1_onnx_report.md  pyproject.toml  train.py
project/1-model/artifacts/: schema.json
project/2-serving/bentoml/: .dockerignore  Dockerfile  README.md  batching.json  bentofile.yaml  calibrate_batching.py  calibration_report.md  entrypoint.sh  pyproject.toml  service.py
project/2-serving/fastapi/: .dockerignore  Dockerfile  README.md  app.py  entrypoint.sh  pyproject.toml
project/3-bench/: _md2pdf.sh  _probe_drvfs.sh  analyze.py  cpu_mechanism_report.py  lib.py  matrix_smoke.py  parity.py  pyproject.toml  run_cpu_mechanism.ps1  setup_wsl.sh  stats.py
project/3-bench/layers/: L0_noise_floor.py  L1_inference_floor.py  L2_host_http.py  L3_cpu_mechanism.py  L3_docker_sweep.py  saturation_pilot.py
project/3-bench/targets/: generate_targets.py
thesis/: phase1.md  phase2.md  phase3.md  phase3_cpu_mechanism_plan.md
thesis/TG_tomas_Modelo_SBC/: library.bib  main.tex
thesis/monograph/: 00_index.md  01_introduction.md  02_background.md  03_related_work.md  04_methodology.md  05_implementation.md  06_results.md  07_discussion.md  08_conclusion.md  09_abstract.md  l1_literature_check.md
thesis/monograph_ptbr/: main.tex  references.bib
thesis/monograph_ptbr/sections/: 00_resumo.tex  01_introducao.tex  02_fundamentacao.tex  03_relacionados.tex  04_metodologia.tex
