[project]
name = "tg-model"
version = "0.1.0"
description = "Phase 1 — XGBoost training and ONNX export on HIGGS"
requires-python = ">=3.11,<3.12"
dependencies = [
    "xgboost>=2.0,<3.0",
    "onnx>=1.16",
    "onnxmltools>=1.12",
    "onnxruntime>=1.18",
    "numpy>=1.26,<3.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4,<1.7",
    "requests>=2.31",
    "tqdm>=4.66",
]

[tool.uv]
package = false
