[project]
name = "tg-bench"
version = "0.1.0"
description = "Phase 3 — Benchmark harness and analysis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "requests>=2.31",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "onnxruntime>=1.18",
    "scipy>=1.13",
]

[tool.uv]
package = false
