[project]
name = "tg-serving-bentoml"
version = "0.1.0"
description = "Phase 2B — BentoML + adaptive batching serving"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bentoml>=1.3,<2.0",
    "onnxruntime>=1.18",
    "numpy>=1.26,<3.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[tool.uv]
package = false
