[project]
name = "tg-serving-fastapi"
version = "0.1.0"
description = "Phase 2A — FastAPI + ONNX Runtime serving"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "onnxruntime>=1.18",
    "numpy>=1.26,<3.0",
    "pydantic>=2.6",
]

[tool.uv]
package = false
